# BeetstreamNext

./: .gitignore  NOTICE.md  OpenSubsonic_endpoints.md  README.md  missing-endpoints.md  pyproject.toml  setup.cfg
beetsplug/beetstream/: __init__.py  albums.py  artists.py  authentication.py  coverart.py  db.py  dummy.py  general.py  playlistprovider.py  playlists.py  search.py  songs.py  stream.py  users.py  utils.py
beetsplug/beetstreamnext/: __init__.py  albums.py  application.py  artists.py  authentication.py  beets_hook.py  bookmarks.py  console.py  constants.py  coverart.py  db.py  dummy.py  external.py  general.py  images.py  index.html  likes.py  lyrics.py  maintenance.py  mappings.py  middleware.py  playlistprovider.py  playlists.py  playqueue.py  ratings.py  schemas.py  scrobble.py  search.py  security.py  settings.py  songs.py  stream.py  user_management.py  userdata_caching.py  users.py  utils.py
beetsplug/beetstreamnext/admin/: __init__.py  forms.py
beetsplug/beetstreamnext/admin/routes/: auth.py  avatars.py  settings_routes.py  users.py
beetsplug/beetstreamnext/api/: __init__.py  albums.py  artists.py  bookmarks.py  coverart.py  general.py  likes.py  lyrics.py  playlists.py  playqueue.py  ratings.py  responses.py  scrobble.py  search.py  serializers.py  songs.py  stream.py  users.py
beetsplug/beetstreamnext/api/routes/: albums.py  artists.py  bookmarks.py  coverart.py  general.py  likes.py  lyrics.py  playlists.py  playqueue.py  radio.py  ratings.py  scrobble.py  search.py  shares.py  songs.py  stream.py  users.py
beetsplug/beetstreamnext/core/: cache.py  database.py  external.py  images.py  logging.py  maintenance.py  playlists.py  radio.py  security.py  tempstore.py  users_crud.py
beetsplug/beetstreamnext/public/: __init__.py  routes.py
beetsplug/beetstreamnext/static/css/: common.css  error.css  index.css  login.css  settings.css
beetsplug/beetstreamnext/static/js/: settings.js
beetsplug/beetstreamnext/templates/: 404.html  base.html  error.html  index.html  login.html  settings.html
beetsplug/beetstreamnext/utils/: db.py  general.py  system.py  text.py
