[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "beetstreamnext"
version = "1.6.0"
description = "A modern, feature-rich OpenSubsonic API server for your Beets.io music library."
authors = ["Florent Le Moël <25004801+FlorentLM@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/FlorentLM/BeetstreamNext"
packages = [{include = "beetsplug"}]

[tool.poetry.dependencies]
python = ">3.9.1,<4.0"
beets = ">=2.0.0"
flask-cors = ">=6.0.1"
cryptography = ">=45.0.6"
pillow = ">=11.3.0"
requests = ">=2.32.4"
requests-cache = ">=1.3.1"
python-dotenv = ">=1.2.2"
ffmpeg-python = {version = ">=0.2.0", optional = true}
wikipedia-api = {version = ">=0.11.0", optional = true}

[tool.poetry.extras]
transcode = ["ffmpeg-python"]
wiki = ["wikipedia-api"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
ruff = ">=0.1.0"
poethepoet = ">=0.24.0"
pre-commit = ">=3.5.0"

[tool.ruff]
# same line length as beets for consistency
line-length = 79
select = ["E", "F", "I", "W", "C90", "N"]
ignore = ["E501"] # handled by formatter

[tool.ruff.format]
quote-style = "single"

[tool.poe.tasks]
# dev tasks
lint = "ruff check ."
format = "ruff format ."
check = [
  {cmd = "ruff format . --check"},
  {cmd = "ruff check ."},
]
test = "pytest"