[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "beetstreamnext"
version = "1.6.0"
description = "A modern, feature-rich OpenSubsonic API server for your Beets.io music library."
authors = ["Florent Le Moël <25004801+FlorentLM@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/FlorentLM/BeetstreamNext"
packages = [{include = "beetsplug"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
beets = ">=2.12.0"
flask-cors = ">=6.0.5"
cryptography = ">=46.0.7"
pillow = ">=12.3.0"
requests = ">=2.34.2"
waitress = ">=3.0.2"
paste = ">=0.2.1"
requests-cache = ">=1.3.3"
python-dotenv = ">=1.2.2"
ffmpeg-python = {version = ">=0.2.0", optional = true}
wikipedia-api = {version = ">=0.15.0", optional = true}
werkzeug = ">=3.1.8"
pylast = ">=7.1.0"
flask-wtf = ">=1.3.0"

[tool.poetry.extras]
transcode = ["ffmpeg-python"]
wiki = ["wikipedia-api"]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.1"
ruff = ">=0.15.21"
poethepoet = ">=0.48.0"
pre-commit = ">=4.6.0"

[tool.ruff]
# same line length as beets for consistency
line-length = 79
select = ["E", "F", "I", "W", "C90", "N"]
ignore = ["E501"] # handled by formatter

[tool.ruff.format]
quote-style = "single"

[tool.poe.tasks]
# dev tasks
lint = "ruff check ."
format = "ruff format ."
check = [
  {cmd = "ruff format . --check"},
  {cmd = "ruff check ."},
]
test = "pytest"